--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+    asdasd
     <script src="js/script.js"></script>
   </body>
 </html>
