--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,31 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    asdasd
+    <aside class="sidepanel">
+      <a href="#" class="sidepanel__link"
+        ><img src="icons/social/facebook.svg" alt="Facebook" /></a
+      ><a href="#" class="sidepanel__link"
+        ><img src="icons/social/instagram.svg" alt="Instagram" /></a
+      ><a href="#" class="sidepanel__link"
+        ><img src="icons/social/github.svg" alt="Github"
+      /></a>
+      <div class="sidepanel__divider"></div>
+      <div class="sidepanel__text"><span>Соціальні мережі</span></div>
+    </aside>
+    <section class="promo">
+      <div class="container">
+        <div class="title title__fz16w promo__subtitle">
+          Мене звати Станіслав Тимчишин
+        </div>
+        <h1 class="title title__fz48w promo__title">
+          Я web-розробник з міста Львів
+        </h1>
+        <div class="promo__btns">
+          <a href="#" class="promo__link btn">Портфоліо</a>
+          <a href="#" class="promo__link btn btn_invisible">Про мене</a>
+        </div>
+      </div>
+    </section>
     <script src="js/script.js"></script>
   </body>
 </html>
