end of the 84th lesson 08.06.2023

--- a/src/index.html
+++ b/src/index.html
@@ -244,10 +244,10 @@
         <span></span>
       </div>
       <div class="container">
-        <div class="title title__fz16w promo__subtitle">
+        <div class="title title__fz16 promo__subtitle">
           Мене звати Станіслав Тимчишин
         </div>
-        <h1 class="title title__fz48w promo__title">
+        <h1 class="title title__fz48 promo__title">
           Я web-розробник з міста Львів
         </h1>
         <div class="promo__btns">
@@ -260,7 +260,9 @@
     <section class="about">
       <div class="container">
         <div class="about__wrapper">
-          <img src="img/main_photo.JPG" alt="My Photo" class="about__photo" />
+          <div class="about__photo">
+            <img src="img/main_photo.JPEG" alt="My Photo" />
+          </div>
           <div class="about__descr">
             <h2 class="title title__fz16 about__title">Про мене</h2>
             <div class="title title__fz36 about__subtitle">
