--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -129,6 +129,10 @@
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" href="css/style.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <aside class="sidepanel">
@@ -377,5 +381,6 @@
     </section>
 
     <script src="js/script.js"></script>
+    <script src="js/wow.js"></script>
   </body>
 </html>
