final 2nd screen 11.06.2023 2:22

--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
 
         <nav>
           <ul class="menu__list">
-            <li class="menu__link"><a href="#">ПРО МЕНЕ</a></li>
+            <li class="menu__link"><a href="#about">ПРО МЕНЕ</a></li>
             <li class="menu__link"><a href="#">НАВИЧКИ</a></li>
             <li class="menu__link"><a href="#">МОЇ ПРАЦІ</a></li>
             <li class="menu__link"><a href="#">КОНТАКТИ</a></li>
@@ -256,16 +256,16 @@
         </h1>
         <div class="promo__btns">
           <a href="#" class="promo__link btn">Портфоліо</a>
-          <a href="#" class="promo__link btn btn_invisible">Про мене</a>
+          <a href="#about" class="promo__link btn btn_invisible">Про мене</a>
         </div>
       </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="container">
         <div class="about__wrapper">
           <div class="about__photo">
-            <img src="img/main_photo.JPEG" alt="My Photo" />
+            <img src="img/main_photo.png" alt="My Photo" />
           </div>
           <div class="about__descr">
             <h2 class="title title__fz16 about__title">Про мене</h2>
@@ -274,13 +274,14 @@
             </div>
             <div class="divider"></div>
             <p class="about__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum
+              Привіт! Я веб-розробник з навичками HTML, CSS та JavaScript.
+              <br />
+              Мої проекти поєднують естетику і функціональність, надаючи
+              користувачам незабутній веб-досвід. Запрошую вас ознайомитися з
+              моїм портфоліо, щоб побачити мою пристрасність та старанність у
+              веб-розробці. <br />
+              Разом, ми можемо створити видовищні веб-проекти, які захоплять
+              вашу аудиторію.
             </p>
           </div>
           <div class="about__skills">
@@ -314,8 +315,9 @@
               <div>
                 <div class="title title__fz14">Web-розробка</div>
                 <div class="about__skills-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Мої веб-розробки поєднують красу і функціональність, а я
+                  використовую різноманітні технології та інструменти, щоб
+                  створювати функціональні та естетичні веб-сайти.
                 </div>
               </div>
             </div>
@@ -370,8 +372,9 @@
               <div>
                 <div class="title title__fz14">UI/UX Design</div>
                 <div class="about__skills-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Моїм головним завданням є створення інтерфейсів, які
+                  приваблюють та надають зручність користувачам для незабутнього
+                  досвіду взаємодії.
                 </div>
               </div>
             </div>
