--- a/src/index.html
+++ b/src/index.html
@@ -6,42 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Primary Meta Tags -->
     <title>Станіслав - Web-розробник</title>
-    <meta name="title" content="Особисте портфоліо" />
+    <meta name="title" content="Особисте портфоліо Stanislav Tymchyshyn" />
     <meta
       name="description"
       content="Особисте портфоліо, де представлені мої найкращі роботи та досягнення."
     />
 
-    <!-- Open Graph / Facebook ЗМІНИТИ КОНТЕНТ НАПИСАТИ СВІЙ URL ADDRESS -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
     <meta
-      property="og:url"
-      content="https://sunburnt5.github.io/stanislavtymchyshyn.github.io/"
+      property="og:title"
+      content="Особисте портфоліо Stanislav Tymchyshyn"
     />
-    <meta property="og:title" content="Особисте портфоліо" />
     <meta
       property="og:description"
       content="Особисте портфоліо, де представлені мої найкращі роботи та досягнення."
     />
     <meta
       property="og:image"
-      content="https://web.telegram.org/47e2b53b-e1e8-4c1f-a0af-79e02d9cb62a"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
     />
 
-    <!-- Twitter ЗМІНИТИ КОНТЕНТ НАПИСАТИ СВІЙ URL ADDRESS -->
+    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
     <meta
-      property="twitter:url"
-      content="https://sunburnt5.github.io/stanislavtymchyshyn.github.io/"
+      property="twitter:title"
+      content="Особисте портфоліо Stanislav Tymchyshyn"
     />
-    <meta property="twitter:title" content="Особисте портфоліо" />
     <meta
       property="twitter:description"
       content="Особисте портфоліо, де представлені мої найкращі роботи та досягнення."
     />
     <meta
       property="twitter:image"
-      content="https://web.telegram.org/47e2b53b-e1e8-4c1f-a0af-79e02d9cb62a"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
     />
 
     <!-- Favicon-->
