--- a/src/index.html
+++ b/src/index.html
@@ -263,7 +263,7 @@
             <div class="title title__fz36 about__subtitle">
               Мене звати Станіслав
             </div>
-            <div class="divider"></div>
+            <div class="divider_about"></div>
             <p class="about__text">
               Привіт! Я веб-розробник з навичками HTML, CSS та JavaScript.
               <br />
@@ -279,26 +279,51 @@
             <div class="about__skills-item">
               <div>
                 <svg
-                  width="25"
-                  height="24"
-                  viewBox="0 0 25 24"
+                  width="31"
+                  height="31"
+                  viewBox="0 0 25 26"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
+                  <path d="M22.5 3.75H11.25V4.58333H22.5V3.75Z" fill="white" />
                   <path
-                    d="M0 0V20.5205H8.02402V21.9877H6.55742V23.4526H18.4425V21.9877H16.9759V20.5205H25V0H0ZM15.511 21.9877H9.48897V20.5205H15.511V21.9877H15.511ZM23.5351 19.0556H1.46489V16.1222H23.5351V19.0556H23.5351ZM23.5351 14.6573H1.46489V1.46494H23.5351V14.6573H23.5351Z"
+                    d="M18.3333 5.41663H11.25V6.24996H18.3333V5.41663Z"
                     fill="white"
                   />
                   <path
-                    d="M9.95816 5.4134L8.92232 4.37756L5.23877 8.06111L8.92232 11.7446L9.95816 10.7088L7.31045 8.06111L9.95816 5.4134Z"
+                    d="M18.3333 7.08337H11.25V7.91671H18.3333V7.08337Z"
                     fill="white"
                   />
                   <path
-                    d="M16.0777 4.37756L15.0419 5.4134L17.6896 8.06111L15.0419 10.7088L16.0777 11.7446L19.7612 8.06111L16.0777 4.37756Z"
+                    d="M22.5 2.08337H14.5833V2.91671H22.5V2.08337Z"
                     fill="white"
                   />
                   <path
-                    d="M12.6319 3.64405L10.9313 12.1931L12.3681 12.4789L14.0687 3.92986L12.6319 3.64405Z"
+                    d="M13.75 2.08337H12.9167V2.91671H13.75V2.08337Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M12.9166 16.6666H12.0833V17.5H12.9166V16.6666Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M6.96124 2.79461L6.37207 2.20544L5.53874 3.03878C5.37608 3.20149 5.37608 3.46524 5.53874 3.62794L6.37207 4.46128L6.96124 3.87211L6.42249 3.33336L6.96124 2.79461Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M10.2946 3.03878L9.46124 2.20544L8.87207 2.79461L9.41082 3.33336L8.87207 3.87211L9.46124 4.46128L10.2946 3.62794C10.4572 3.46524 10.4572 3.20149 10.2946 3.03878Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M7.93836 1.95109L7.10425 4.45105L7.89435 4.71467L8.72846 2.21471L7.93836 1.95109Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M21.6667 12.9167V9.58333H20.8334V12.9167H20V8.75H19.1667V12.9167H18.3334V10.8333H17.5V12.9167H16.6667V10.4167H15.8334V12.9167H15V11.25H14.1667V12.9167H13.3334V13.75H22.5V12.9167H21.6667Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M22.0834 0H2.91669C1.53653 0.00135417 0.418041 1.11984 0.416687 2.5V10.6775V10.6812V15.4167V16.6667C0.418041 18.0468 1.53653 19.1653 2.91669 19.1667H8.07585L6.40919 22.5H4.16669C3.47632 22.5 2.91669 23.0596 2.91669 23.75C2.91669 24.4404 3.47632 25 4.16669 25H20.8334C21.5237 25 22.0834 24.4404 22.0834 23.75C22.0834 23.0596 21.5237 22.5 20.8334 22.5H18.5909L16.9242 19.1667H22.0834C23.4635 19.1653 24.582 18.0468 24.5834 16.6667V2.5C24.582 1.11984 23.4635 0.00135417 22.0834 0ZM1.25002 5.8625L2.1971 6.99C2.27627 7.08432 2.39315 7.13875 2.51627 7.13875H3.79169C3.91481 7.13875 4.03169 7.08432 4.11085 6.99L5.05835 5.8625L5.99335 6.16625L6.09669 7.63417C6.10523 7.75693 6.16762 7.86964 6.2671 7.94208L7.29919 8.69208C7.39903 8.76417 7.52549 8.7887 7.64502 8.75917L9.07544 8.40375L9.65377 9.19917L8.87419 10.4492C8.8096 10.554 8.79466 10.6819 8.83335 10.7987L9.22794 12.0117C9.26591 12.1286 9.35356 12.2229 9.46752 12.2692L10.8334 12.8229V13.8062L9.46669 14.36C9.35247 14.406 9.26466 14.5006 9.2271 14.6179L9.1021 15H6.70169C7.63544 13.045 6.80752 10.7032 4.85252 9.76943C3.70424 9.22099 2.36122 9.26359 1.25002 9.88375V5.8625ZM1.25002 10.875C2.59773 9.82359 4.54262 10.0638 5.59398 11.4116C6.40575 12.4521 6.46841 13.8929 5.75002 15H1.25002V10.875ZM20.8334 23.3333C21.0635 23.3333 21.25 23.5199 21.25 23.75C21.25 23.9801 21.0635 24.1667 20.8334 24.1667H4.16669C3.93658 24.1667 3.75002 23.9801 3.75002 23.75C3.75002 23.5199 3.93658 23.3333 4.16669 23.3333H20.8334ZM17.6592 22.5H7.34085L9.00752 19.1667H15.9925L17.6592 22.5ZM23.75 16.6667C23.75 17.5871 23.0038 18.3333 22.0834 18.3333H2.91669C1.99622 18.3333 1.25002 17.5871 1.25002 16.6667V15.8333H5.96752H5.97127H23.75V16.6667ZM23.75 15H10.1063L11.4067 14.4729C11.5638 14.4092 11.6666 14.2566 11.6667 14.0871V12.5417C11.6667 12.372 11.5639 12.2192 11.4067 12.1554L9.95835 11.5696L9.68419 10.7258L10.51 9.40083C10.5996 9.25688 10.593 9.07302 10.4934 8.93583L9.58502 7.68583C9.48528 7.54849 9.31226 7.48536 9.14752 7.52625L7.63252 7.90125L6.91669 7.38125L6.8071 5.82708C6.79518 5.65766 6.68158 5.5124 6.52002 5.46L5.05127 4.9825C4.88966 4.93104 4.71299 4.98182 4.60335 5.11125L3.60044 6.305H2.71169L1.70835 5.11125C1.59867 4.98167 1.42174 4.93083 1.26002 4.9825L1.25002 4.98625V2.5C1.25002 1.57953 1.99622 0.833333 2.91669 0.833333H22.0834C23.0038 0.833333 23.75 1.57953 23.75 2.5V15Z"
                     fill="white"
                   />
                 </svg>
@@ -316,8 +341,8 @@
             <div class="about__skills-item">
               <div>
                 <svg
-                  width="25"
-                  height="21"
+                  width="31"
+                  height="28"
                   viewBox="0 0 25 21"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -369,6 +394,120 @@
                 </div>
               </div>
             </div>
+            <div class="about__skills-item">
+              <div>
+                <?xml version="1.0" ?><svg
+                  viewBox="0 0 26 27"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <defs>
+                    <style>
+                      .cls-1 {
+                        fill: #fff;
+                      }
+                    </style>
+                  </defs>
+                  <g data-name="Layer 2" id="Layer_2">
+                    <g data-name="Layer 1" id="Layer_1-2">
+                      <path
+                        class="cls-1"
+                        d="M14.406,10.389l-.649-.895,1.092-.174c.4-.089.3-.639.334-.946-.037-.306.071-.858-.334-.947l-1.093-.173.65-.894c.244-.51-.612-1.031-.946-1.341-.29-.254-.81.356-1.288.651L12,4.577c-.165-.526-1.181-.3-1.617-.278-.381.029-.316.793-.45,1.37l-.9-.65C8.526,4.776,8,5.638,7.7,5.968c-.253.29.358.811.651,1.286l-1.092.173c-.405.091-.3.63-.333.947.037.317-.072.854.333.946l1.092.174-.65.895c-.244.509.615,1.031.946,1.34.29.254.811-.357,1.288-.651l.174,1.093c.094.405.626.294.947.332.321-.038.854.073.946-.332l.174-1.093.895.65c.51.244,1.032-.616,1.34-.947A.335.335,0,0,0,14.406,10.389Zm-1.148.65-.856-.622c-.209-.161-.427.032-.635.092-.315.056-.282.861-.391,1.309a3.69,3.69,0,0,1-.648,0c-.11-.45-.076-1.253-.391-1.309-.208-.06-.427-.254-.635-.092l-.857.621a3.425,3.425,0,0,1-.458-.459l.621-.856c.161-.208-.031-.425-.091-.633-.055-.317-.856-.282-1.31-.392a3.34,3.34,0,0,1,0-.648c.453-.11,1.254-.075,1.31-.392.06-.208.252-.426.091-.634l-.622-.856a3.554,3.554,0,0,1,.459-.459L9.7,6.33c.208.16.426-.03.634-.091.316-.056.282-.857.392-1.31a3.34,3.34,0,0,1,.648,0c.11.452.075,1.254.391,1.31.209.06.427.253.635.092l.856-.622a3.492,3.492,0,0,1,.459.459l-.622.856c-.161.209.031.426.093.635.055.315.86.282,1.309.391a3.34,3.34,0,0,1,0,.648c-.452.11-1.254.075-1.309.391-.062.208-.254.426-.093.634l.622.857A3.554,3.554,0,0,1,13.258,11.039ZM11.052,7.033a1.34,1.34,0,0,0,0,2.68A1.34,1.34,0,0,0,11.052,7.033Zm0,2.01a.67.67,0,0,1,0-1.34A.67.67,0,0,1,11.052,9.043ZM20.877,0H1.228A1.23,1.23,0,0,0,0,1.228V18.2a1.23,1.23,0,0,0,1.228,1.228H6.7v2.01H4.354a.335.335,0,1,0,0,.669h13.4a.335.335,0,0,0,0-.669H15.406v-2.01h5.471A1.23,1.23,0,0,0,22.105,18.2V1.228A1.23,1.23,0,0,0,20.877,0ZM.67,1.228A.558.558,0,0,1,1.228.67H20.877a.558.558,0,0,1,.558.558V16.077H.67ZM14.736,21.436H7.368v-2.01h7.368Zm6.7-3.238a.558.558,0,0,1-.558.558H1.228A.558.558,0,0,1,.67,18.2V16.747H21.435ZM3.237,9.824A1.45,1.45,0,0,0,4.645,8.709c.59-.047,1.378.18,1.383-.335a.335.335,0,0,0-.335-.335H4.645A1.45,1.45,0,1,0,3.237,9.824Zm0-2.232a.781.781,0,0,1,0,1.562A.781.781,0,0,1,3.237,7.592Zm0-2.233A1.451,1.451,0,0,0,4.645,4.242h1.8l.635.634c.3.312.786-.17.473-.473L6.823,3.67c-.064-.194-1.854-.061-2.178-.1A1.45,1.45,0,1,0,3.237,5.359Zm0-2.233a.781.781,0,0,1,0,1.562A.781.781,0,0,1,3.237,3.126ZM7.082,11.87l-.635.634h-1.8a1.45,1.45,0,1,0,0,.67c.32-.036,2.114.1,2.178-.1l.732-.732C7.867,12.041,7.385,11.558,7.082,11.87ZM3.237,13.621a.782.782,0,0,1,0-1.563A.782.782,0,0,1,3.237,13.621Zm15.63-6.7a1.449,1.449,0,0,0-1.408,1.116c-.59.046-1.378-.181-1.384.335a.336.336,0,0,0,.335.335h1.048a1.45,1.45,0,1,0,1.409-1.786Zm0,2.232a.781.781,0,0,1,0-1.562A.781.781,0,0,1,18.867,9.154Zm0,2.234A1.452,1.452,0,0,0,17.458,12.5h-1.8l-.635-.634a.335.335,0,0,0-.473.474l.733.732c.062.194,1.859.061,2.178.1a1.449,1.449,0,1,0,1.408-1.786Zm0,2.233a.782.782,0,0,1,0-1.563A.782.782,0,0,1,18.867,13.621Zm0-11.165a1.452,1.452,0,0,0-1.409,1.116c-.32.036-2.114-.1-2.177.1l-.733.733c-.312.3.171.785.473.473l.635-.634h1.8a1.449,1.449,0,1,0,1.408-1.786Zm0,2.232a.781.781,0,0,1,0-1.562A.781.781,0,0,1,18.867,4.688Z"
+                        id="software"
+                      />
+                    </g>
+                  </g>
+                </svg>
+              </div>
+              <div>
+                <div class="title title__fz14">Розробка додатків</div>
+                <div class="about__skills-text">
+                  Розробка додатків дає мені можливість творчо впливати на життя
+                  людей, створюючи зручні інтерфейси, які полегшують їх щоденну
+                  взаємодію з технологіями.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="skills">
+      <div class="container">
+        <div class="title title__fz14 skills__title">Навички</div>
+        <div class="title skills__subtitle">Що я використовую в роботі</div>
+        <div class="divider_skills"></div>
+        <div class="skills__items">
+          <div class="skills__items-item">
+            <img src="icons/skills/html5.svg" alt="HTML5" />
+            <div class="title title__fz14 skills__items-title">HTML5</div>
+            <div class="skills__items-descr">
+              HTML створює каркас вашого веб-сайту або додатку, а п'ята версія
+              дозволить мені створювати більш SEO-оптимізовану структуру.
+            </div>
+          </div>
+          <div class="skills__items-item">
+            <img src="icons/skills/css3.svg" alt="CSS3" />
+            <div class="title title__fz14 skills__items-title">CSS3</div>
+            <div class="skills__items-descr">
+              CSS дозволяє мені створювати абсолютно будь-який зовнішній вигляд
+              вашого веб-сайту або додатку. Все обмежується лише вашою
+              фантазією!
+            </div>
+          </div>
+          <div class="skills__items-item">
+            <img src="icons/skills/js.svg" alt="JavaScript" />
+            <div class="title title__fz14 skills__items-title">JavaScript</div>
+            <div class="skills__items-descr">
+              JavaScript дає змогу оживити все, що завгодно: слайдери, вікна,
+              підказки, вкладки, отримання даних від сервера та багато іншого.
+            </div>
+          </div>
+          <div class="skills__items-item">
+            <img src="icons/skills/react.svg" alt="React" />
+            <div class="title title__fz14 skills__items-title">React</div>
+            <div class="skills__items-descr">
+              React - моє улюблене рішення для простого створення вражаючих
+              веб-інтерфейсів з великим спектром можливостей.
+            </div>
+          </div>
+        </div>
+        <div class="skills__item">
+          <div class="skills__item-skills">
+            <div class="skills__item-name">Створення сайтів</div>
+            <div class="skills__item-percent">100%</div>
+            <div class="skills__item-lines" style="width: 100%"></div>
+            <div class="skills__item-line"></div>
+          </div>
+          <div class="skills__item-skills">
+            <div class="skills__item-name">Створення програм</div>
+            <div class="skills__item-percent">80%</div>
+            <div class="skills__item-lines" style="width: 80%"></div>
+            <div class="skills__item-line"></div>
+          </div>
+          <div class="skills__item-skills">
+            <div class="skills__item-name">Робота з даними</div>
+            <div class="skills__item-percent">75%</div>
+            <div class="skills__item-lines" style="width: 75%"></div>
+            <div class="skills__item-line"></div>
+          </div>
+          <div class="skills__item-skills">
+            <div class="skills__item-name">Креативність</div>
+            <div class="skills__item-percent">80%</div>
+            <div class="skills__item-lines" style="width: 80%"></div>
+            <div class="skills__item-line"></div>
+          </div>
+          <div class="skills__item-skills">
+            <div class="skills__item-name">Створення дизайну</div>
+            <div class="skills__item-percent">85%</div>
+            <div class="skills__item-lines" style="width: 85%"></div>
+            <div class="skills__item-line"></div>
+          </div>
+          <div class="skills__item-skills">
+            <div class="skills__item-name">Soft skills</div>
+            <div class="skills__item-percent">95%</div>
+            <div class="skills__item-lines" style="width: 95%"></div>
+            <div class="skills__item-line"></div>
           </div>
         </div>
       </div>
