--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@
           Я web-розробник з міста Львів
         </h1>
         <div class="promo__btns">
-          <a href="#" class="promo__link btn">Портфоліо</a>
+          <a href="#portfolio" class="promo__link btn">Портфоліо</a>
           <a href="#about" class="promo__link btn btn_invisible">Про мене</a>
         </div>
       </div>
