--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -492,8 +492,6 @@
         <div class="title title__section-subtitle">Мої праці</div>
         <div class="divider_portfolio"></div>
         <div class="portfolio__wrapper">
-          <!-- щоб зробити посилання на сайт, найкраще папку з сайтом закинути 
-            в папку docs і потім в href прописати href="/*назва проекту*" -->
           <a href="#" class="portfolio__item">
             <img src="img/works/uber.jpg" alt="test" />
           </a>
@@ -520,7 +518,24 @@
       <div class="container">
         <div class="contacts__wrapper">
           <div class="contacts__photo">
-            <img src="img/main_photo.png" alt="My Photo" />
+            <svg
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+              width="192"
+              height="192"
+              style="transform: rotate(-17deg)"
+            >
+              <path
+                d="M12.69 12.06a1 1 0 0 1-1.34 0L2.87 4.35A2 2 0 0 1 4 4h16a2 2 0 0 1 1.13.35Z"
+                fill="#ffffff"
+                class="fill-464646"
+              ></path>
+              <path
+                d="M22 6.26V17a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3V6.26l8.68 7.92a2 2 0 0 0 1.32.49 2 2 0 0 0 1.33-.51Z"
+                fill="#ffffff"
+                class="fill-464646"
+              ></path>
+            </svg>
           </div>
           <div class="contacts__descr">
             <h2 class="title title__fz16 contacts__title">Контакти</h2>
@@ -560,21 +575,30 @@
             </div>
             <form action="#" class="contacts__form">
               <div class="contacts__input">
-                <input name="name" id="name" type="text" />
+                <input required name="name" id="name" type="text" />
                 <label for="name">Ваше ім’я</label>
               </div>
               <div class="contacts__input">
-                <input name="email" id="email" type="email" />
+                <input required name="email" id="email" type="email" />
                 <label for="email">Ваша пошта</label>
               </div>
               <div class="contacts__textarea">
-                <textarea name="text" id="text"></textarea>
+                <textarea required name="text" id="text"></textarea>
                 <label for="text">Ваше повідомлення</label>
               </div>
-              <div>
+              <div class="contacts__triggers">
                 <button class="contacts__btn btn">
                   Відправити повідомлення
                 </button>
+                <div class="contacts__policy">
+                  <input required type="checkbox" />
+                  <span
+                    >Я згоден(а) з
+                    <a target="_blank" href="/policy.html"
+                      >політикою конфіденційності</a
+                    >
+                  </span>
+                </div>
               </div>
             </form>
           </div>
