end of the 93rd lesson

--- a/src/index.html
+++ b/src/index.html
@@ -226,6 +226,22 @@
       <div class="container">
         <div class="about__wrapper">
           <div class="about__photo">
+            <!-- <img srcset="img/main_photo-min.jpg 300w,
+                              img/main_photo.jpg 400w"
+                      sizes="(max-width: 576px) 280px,
+                             (min-width: 577px) 400px" 
+                      src="img/main_photo.jpg 
+                      alt="Photo" /> -->
+            <!-- <picture>
+                  <source media="(max-width: 576px)" srcset="img/main_photo-min.jpg">
+                  <source media="(min-width: 577px)" srcset="img/main_photo.jpg">
+                  <img src="img/main_photo.jpg" alt="photo">
+                  </picture> -->
+
+            <!-- <picture>
+                  <source type="image/webp" srcset="img/main_photo.webp">
+                  <img src="img/main_photo.jpg" alt="photo">
+                  </picture> -->
             <img src="img/main_photo.png" alt="My Photo" />
           </div>
           <div class="about__descr">
