change contact section:

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -383,10 +383,7 @@
 
             <div class="about__skills-item">
               <div>
-                <?xml version="1.0" ?><svg
-                  viewBox="0 0 26 27"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg viewBox="0 0 26 27" xmlns="http://www.w3.org/2000/svg">
                   <defs>
                     <style>
                       .cls-1 {
