changes in dividers and in contacts section. end of the portfolio.

--- a/src/index.html
+++ b/src/index.html
@@ -583,10 +583,10 @@
                 <img src="icons/contacts/Instagram.svg" alt="Instagram" />
               </a>
             </div>
-            <div class="title title__fz14 contacts__text">
+            <!-- <div class="title title__fz14 contacts__text">
               Або залишіть свої дані і я сам вам напишу
-            </div>
-            <form action="#" class="contacts__form">
+            </div> -->
+            <!-- <form action="#" class="contacts__form">
               <div class="contacts__input">
                 <input required name="name" id="name" type="text" />
                 <label for="name">Ваше ім’я</label>
@@ -613,7 +613,7 @@
                   </span>
                 </div>
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
       </div>
